--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   file_picker: ^5.0.1
   permission_handler: ^10.0.0
+  awesome_snackbar_content: ^0.0.8
 
 dev_dependencies:
   flutter_test:
