--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   file_picker: ^5.0.1
   permission_handler: ^10.0.0
   awesome_snackbar_content: ^0.0.8
+  flutter_native_splash: ^2.2.7
 
 dev_dependencies:
   flutter_test:
