--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,15 +31,12 @@ dependencies:
   path_provider: ^2.0.11
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   file_picker: ^5.0.1
   permission_handler: ^10.0.0
   awesome_snackbar_content: ^0.0.8
   flutter_native_splash: ^2.2.7
-
+  intl: ^0.17.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
